prevent overflow on shapes

--- a/src/components/Shapes/square.module.css
+++ b/src/components/Shapes/square.module.css
@@ -1,5 +1,7 @@
 .self {
     display: flex;
+    text-overflow: clip;
+    overflow: hidden;
     flex-direction: row;
     align-items: center;
     justify-content: center;
